sidebar and navbar design Done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>HR SYSTEM Frontend</h1>
+<div class="d-flex">
+    <app-sidebar></app-sidebar>
+    <div class="w-100">
+        <app-navbar></app-navbar>
+    </div>
+</div>
