--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <app-sidebar></app-sidebar>
     <div class="w-100">
         <app-navbar></app-navbar>
+        <router-outlet></router-outlet>
     </div>
 </div>
