--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="color navbar navbar-expand-lg navbar-light  px-3">
+<nav class="color navbar navbar-expand-lg navbar-light px-3">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +7,16 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item p-1">
-                    <span class="nav-link navbarHeader fw-bold"><h4>Good Morning </h4></span>
-                    <p class="nav-link navbarHeader"> A preview of your business</p>
+                    <span class="nav-link navbarHeader fw-bold">
+                        <h4>Good Morning </h4>
+                    </span>
+                    <p class="nav-link navbarHeader">A preview of your business</p>
                 </li>
             </ul>
             <form class="d-flex align-items-center search">
                 <div class="position-relative">
                     <input class="form-control ps-5 pe-5 searchInput p-2" type="search" placeholder="Search..." aria-label="Search">
-        
-                    <i class="bi bi-search position-absolute" ></i>
-        
+                    <i class="bi bi-search position-absolute" style="left: 10px; top: 50%; transform: translateY(-50%);"></i>
                     <i class="bi bi-x position-absolute" style="color: #e94d65; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
                 </div>
             </form>
