--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,68 +2,79 @@
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <div class="row">
             <div class="col-3">
-                <img src="images/PioneersSolutions.png" alt="PioneersSolutions" class="logo">
+                <img src="images/PioneersSolutions.png" alt="PioneersSolutions" class="logo img-fluid"> 
             </div>
-            <div class="col-9  mt-2 sidebarHeader">
+            <div class="col-9 mt-2 sidebarHeader">
                 <h5 class="fw-bold">Pioneers Solutions</h5>
-                <p class="pHeader">Hr System</p>
+                <p class="pHeader mb-0">Hr System</p>
             </div>
         </div>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link d-flex align-items-center"             
+            [routerLink]="['/dashboard']"> 
                 <i class="bi bi-house-door-fill me-2"></i> Dashboard
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/users']"> 
                 <i class="bi bi-people-fill me-2"></i> All Users
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/employees']"> 
                 <i class="bi bi-person-bounding-box me-2"></i> All Employees
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/leaves']">
                 <i class="bi bi-calendar-event me-2"></i> Leaves
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/officalHolidays']">
                 <i class="bi bi-calendar4-week me-2"></i> Official Holidays
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/attendance']">
                 <i class="bi bi-clock-history me-2"></i> Attendance
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
-                <i class="bi bi-diagram-3 me-2"></i> Department
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/dapartments']">
+                <i class="bi bi-diagram-3 me-2"></i> Departments
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/groups']">
                 <i class="bi bi-people-fill me-2"></i> Groups
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/salary']">
                 <i class="bi bi-wallet2 me-2"></i> Salary
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/weeklyHolidays']">
                 <i class="bi bi-calendar-week me-2"></i> Weekly Holidays
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link ">
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/']">
                 <i class="bi bi-box-arrow-left me-2"></i> Logout
             </a>
         </li>
