create page department with crud

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar d-flex flex-column flex-shrink-0 p-3" style="width: 250px; height: 100vh;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <div class="row">
+        <div class="row mt-2">
             <div class="col-3">
-                <img src="images/PioneersSolutions.png" alt="PioneersSolutions" class="logo img-fluid"> 
+                <img src="images/PioneersSolutions.png" alt="PioneersSolutions" class="logo img-fluid">
             </div>
-            <div class="col-9 mt-2 sidebarHeader">
+            <div class="col-9 sidebarHeader">
                 <h5 class="fw-bold">Pioneers Solutions</h5>
                 <p class="pHeader mb-0">Hr System</p>
             </div>
@@ -13,20 +13,20 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a href="#" class="nav-link d-flex align-items-center"             
-            [routerLink]="['/dashboard']"> 
+            <a href="#" class="nav-link d-flex align-items-center"
+            [routerLink]="['/dashboard']">
                 <i class="bi bi-house-door-fill me-2"></i> Dashboard
             </a>
         </li>
         <li>
             <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/users']"> 
+            [routerLink]="['/users']">
                 <i class="bi bi-people-fill me-2"></i> All Users
             </a>
         </li>
         <li>
             <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/employees']"> 
+            [routerLink]="['/employees']">
                 <i class="bi bi-person-bounding-box me-2"></i> All Employees
             </a>
         </li>
