--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,3 +1,5 @@
-<div class="container">
+<div class="container px-5 py-3">
   <app-page-title [title]="'All Employee'"></app-page-title>
+  <div class="d-flex justify-content-end align-items-center mb-3">
+    <app-add-button [entity]="'Employee'"></app-add-button>
 </div>
