--- a/src/app/pages/department/department.component.css
+++ b/src/app/pages/department/department.component.css
@@ -1,7 +1,8 @@
-table{
+table {
   width: 100%;
 }
-tr{
+
+tr {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,29 +11,32 @@ tr{
   margin: 12px auto;
   border-radius: 8px;
 }
+
 .table-header {
-  background-color: #DAFFF5 !important;
-  color: #224A46 !important;
+  background-color: var(--primary-200-color) !important;
 }
-th{
-  color: #224A46;
-  font-size: 12px;
-  font-weight: 400;
+
+th {
+  color: var(--primary-800-color);
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 700;
+
 }
-td{
-  color: #141D21;
+
+td {
+  color: var(--primary-800-color);
   font-size: 14px;
   font-weight: 400;
 }
 
-th,
-td{
-  text-align: center;
-  margin-left: 12px;
-  margin-right: 12px;
+.alert{
+  position: fixed;
+  bottom: 0;
+  right: 50px;
+  width: 350px;
 }
-
-.pagination {
+/* .pagination {
   border-radius: 10px !important;
   background: #FFF !important;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) !important;
@@ -53,9 +57,4 @@ td{
 .page-item:last-child,
 .page-item:first-child{
   display: none !important;
-}
-
-.last-col{
-   flex: 1;
-   justify-content: end;
-}
+} */
