--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -1,29 +1,51 @@
 <div class="container px-5 py-3">
   <app-page-title [title]="'All Department'"></app-page-title>
+  @if(message){
+  <div class="alert alert-success">
+    {{ message }}
+    <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
+  </div>
+  }
+  <div class="d-flex justify-content-end align-items-center mb-3">
+    <app-add-button [entity]="'Department'"
+      [routerLink]="['/departments', 0, 'edit']"></app-add-button>
+  </div>
   <div className="table-responsive mb-4">
     <table className="order-table">
       <thead>
-        <tr className='table-header'>
-          <th scope="col">id</th>
-          <th scope="col">name</th>
-          <th scope="col" class="last-col">action</th>
+        <tr class='row table-header'>
+          <th scope="col" class="col-1">id</th>
+          <th scope="col" class="col-4">name</th>
+          <th scope="col" class="col-7">action</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let department of departments">
-
-          <td scope="row">{{department?.id}}</td>
-          <td>{{department?.name}}</td>
-          <td class="last-col">
-             <div class="d-flex justify-content-end">
-              <button class="btn btn-info mx-2">View</button>
-              <button class="btn btn-primary mx-2">Edit</button>
-              <button class="btn btn-danger mx-2">Delete</button>
-             </div>
+        @for(department of departments ; track departments.id){
+        <tr class="row">
+          <td class="col-1">{{department?.id}}</td>
+          <td class="col-4">{{department?.name}}</td>
+          <td class="col-7">
+            <button class="btn btn-info me-2"><i class="bi bi-eye"></i>
+              View</button>
+            <button class="btn btn-primary mx-2"
+              [routerLink]="['/departments', department?.id, 'edit']">
+              <i class="bi bi-pen"></i>
+              Edit
+            </button>
+            <button class="btn btn-danger mx-2"
+            (click)="openDeleteModal(department?.id)">
+              <i class="bi bi-x-lg"></i>
+              Delete
+            </button>
           </td>
         </tr>
-
+        }
       </tbody>
     </table>
-
+    <app-confirm-modal
+    *ngIf="showModal"
+    (confirm)="confirmDelete()"
+    (cancel)="closeModal()"
+    [message]="'Are you sure you want to delete this department?'"
+  ></app-confirm-modal>
   </div>
