finish department page

--- a/src/app/components/add-button/add-button.component.html
+++ b/src/app/components/add-button/add-button.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-secondary"  [routerLink]="routerLink">
+<button class="btn btn-add"  [routerLink]="routerLink">
   <i class="bi bi-plus-lg"></i>
   Add {{ entity }}
 </button>
