--- a/src/app/components/confirm-modal/confirm-modal.component.html
+++ b/src/app/components/confirm-modal/confirm-modal.component.html
@@ -3,14 +3,14 @@
     <div class="modal-content">
       <div class="modal-header d-flex justify-content-between">
         <h5 class="modal-title">Confirm Delete</h5>
-        <i class="bi bi-x-lg ms-5 text-danger fw-bolder" (click)="closeModal()" role="button"></i>
+        <i class="bi bi-x-lg ms-5 text-light fw-bolder" (click)="closeModal()" role="button"></i>
       </div>
       <div class="modal-body">
         <p>{{message}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="closeModal()">Cancel</button>
-        <button type="button" class="btn btn-danger" (click)="confirmDelete()">Delete</button>
+        <button type="button" class="btn btn-outline-light" (click)="closeModal()">Cancel</button>
+        <button type="button" class="btn btn-delete" (click)="confirmDelete()">Delete</button>
       </div>
     </div>
   </div>
