--- a/src/app/components/department-form/department-form.component.html
+++ b/src/app/components/department-form/department-form.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="d-flex justify-content-end my-5">
-      <button type="submit" class="btn btn-secondary px-4">
+      <button type="submit" class="btn btn-add px-4">
         {{ departmentId == 0 ? "Add Department" : "Edit Department" }}
       </button>
     </div>
