--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="login-box">
+        <div class="left-side text-center">
+            <img src="images/bg-login.jpg" alt="login-bg" class="left-image" />
+            <h2>Welcome Back,</h2>
+            <p>Now is the right time to develop your business with our company.</p>
+        </div>
+        <div class="right-side">
+            <div class="logo">
+                <img src="images/Full-logo.png" alt="Logo" />
+            </div>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" placeholder="you@example.com" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Please Enter Your Password"
+                        class="form-control" />
+                </div>
+                <div class="form-footer">
+                    <a href="#" class="forgot-password">forget password?</a>
+                </div>
+                <button type="submit" class="login-button">Log in</button>
+            </form>
+        </div>
+    </div>
+</div>
