--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,8 +1,7 @@
-<!-- <div class="d-flex">
+<div class="d-flex">
     <app-sidebar></app-sidebar>
     <div class="w-100">
         <app-navbar></app-navbar>
         <router-outlet></router-outlet>
     </div>
-</div> -->
-<router-outlet></router-outlet>
+</div>
