--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,17 +12,18 @@
             <form>
                 <div class="form-group">
                     <label for="email">Email Address:</label>
-                    <input type="email" id="email" name="email" placeholder="you@example.com" class="form-control" />
+                    <input type="email" [(ngModel)]="loginObj.email" id="email" name="email"
+                        placeholder="you@example.com" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" placeholder="Please Enter Your Password"
-                        class="form-control" />
+                    <input type="password" [(ngModel)]="loginObj.password" id="password" name="password"
+                        placeholder="Please Enter Your Password" class="form-control" />
                 </div>
                 <div class="form-footer">
                     <a href="#" class="forgot-password">forget password?</a>
                 </div>
-                <button type="submit" class="login-button">Log in</button>
+                <button type="submit" (click)="onlogin()" class="login-button">Log in</button>
             </form>
         </div>
     </div>
