--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,12 +12,12 @@
             <form>
                 <div class="form-group">
                     <label for="email">Email Address:</label>
-                    <input type="email" [(ngModel)]="loginObj.email" id="email" name="email"
+                    <input type="email" [(ngModel)]="email" id="email" name="email"
                         placeholder="you@example.com" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" [(ngModel)]="loginObj.password" id="password" name="password"
+                    <input type="password" [(ngModel)]="password" id="password" name="password"
                         placeholder="Please Enter Your Password" class="form-control" />
                 </div>
                 <div class="form-footer">
