--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -27,7 +27,9 @@
       <ng-container matColumnDef="action" class="col-7">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let department">
-          <button class="btn btn-view me-2" [routerLink]="['/departments', department.id]"><i class="bi bi-eye"></i>
+          <button class="btn btn-view me-2"
+            [routerLink]="['/departments', department.id]"><i
+              class="bi bi-eye"></i>
             View</button>
           <button class="btn btn-edit mx-2"
             [routerLink]="['/departments', department.id, 'edit']">
@@ -51,6 +53,8 @@
     }
 
     <mat-paginator [length]="totalDepartments" [pageSize]="5"
-      [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4"></mat-paginator>
+      [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4">
+    </mat-paginator>
 
   </div>
+</div>
