--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,5 +1,78 @@
 <div class="container px-5 py-3">
-  <app-page-title [title]="'All Employee'"></app-page-title>
-  <div class="d-flex justify-content-end align-items-center mb-3">
-    <app-add-button [entity]="'Employee'"></app-add-button>
+  <app-page-title [title]="'All Employees'" />
+  @if(message){
+    <div class="alert alert-success">
+      {{ message }}
+      <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
+    </div>
+    }
+    <div class="d-flex justify-content-end align-items-center mb-4">
+      <app-add-button [entity]="'Employee'"
+        [routerLink]="['/employees', 0, 'edit']" />
+    </div>
+
+    <div className="table-responsive mb-4">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="id" class="col-1">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email" >
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.email}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> Position </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.position}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="department" >
+          <th mat-header-cell *matHeaderCellDef> Department </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.department.name}} </td>
+        </ng-container>
+
+
+        <!-- Add other columns as needed -->
+        <ng-container matColumnDef="action" >
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let employee">
+            <button class="btn btn-view me-2"
+              [routerLink]="['/employees', employee.id]"><i
+                class="bi bi-eye"></i>
+              View</button>
+            <button class="btn btn-edit mx-2"
+              [routerLink]="['/employees', employee.id, 'edit']">
+              <i class="bi bi-pen"></i> Edit
+            </button>
+            <button class="btn btn-delete mx-2"
+              (click)="openDeleteModal(employee.id)">
+              <i class="bi bi-x-lg"></i> Delete
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      @if(showModal){
+      <app-confirm-modal
+        (confirmed)="confirmDelete()"
+        (closed)="closeModal()"
+        [message]="'Are you sure you want to delete this employee?'" />
+      }
+
+      <mat-paginator [length]="totalEmployees" [pageSize]="5"
+        [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4">
+      </mat-paginator>
+
+    </div>
 </div>
