--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
         </li>
         <li>
             <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/dapartments']">
+            [routerLink]="['/departments']">
                 <i class="bi bi-diagram-3 me-2"></i> Departments
             </a>
         </li>
@@ -74,7 +74,7 @@
         </li>
         <li>
             <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/']">
+            [routerLink]="['/']" (click)="logout()">
                 <i class="bi bi-box-arrow-left me-2"></i> Logout
             </a>
         </li>
