design for notFound page done

--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,1 +1,10 @@
-<p>notfound works!</p>
+<div class="all text-center">
+    <h1 class=" fs-1">Oops!</h1>
+    <p class="text-danger fs-5">Error404 - Page Not Found</p>
+    <p class="fs-5">We Couldn't find the page you are looking for</p>
+    <button class="btn" [routerLink]="['/dashboard']">
+        Back to Dashboard
+    </button>
+    <br>
+    <img src="images/notfound.webp" alt="notfound" >
+</div>
