--- a/src/app/components/department-details/department-details.component.html
+++ b/src/app/components/department-details/department-details.component.html
@@ -39,6 +39,16 @@
           <td mat-cell *matCellDef="let employee"> {{ employee.salary }} </td>
         </ng-container>
 
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let employee">
+            <button class="btn btn-view me-2"
+            [routerLink]="['/employees', employee.id]">
+            <i class="bi bi-eye"></i> View
+          </button>
+        </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
