--- a/src/app/pages/attendance/attendance.component.html
+++ b/src/app/pages/attendance/attendance.component.html
@@ -1,1 +1,144 @@
-<p>attendance works!</p>
+
+
+ <div class="container px-5 py-3">
+    <app-page-title [title]="'All Attendance'" />
+    @if(message){
+    <div class="alert alert-success">
+      {{ message }}
+      <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
+    </div>
+    }
+
+    <!-- <form class="d-flex align-items-center mb-4 ">
+       <div class="position-relative">
+    <input
+      type="text"
+      placeholder="Search by Employee or Department"
+      [(ngModel)]="searchTerm"
+      (input)="applyFilter()"
+      class="form-control ps-5 pe-5 p-2"
+    />
+     <i class="bi bi-search position-absolute" style="left: 10px; top: 50%; transform: translateY(-50%);"></i> 
+  </div>
+</form> -->
+<div class="d-flex justify-content-center align-items-center mb-4">
+  <div class="position-relative search-input">
+    <input class="form-control ps-5 pe-5 p-2"
+      id="searchEmployeeName"
+      placeholder="Search By Employee Name"
+      [(ngModel)]="searchTerm" type="search" aria-label="Search" (input)="applyFilter()">
+    <i class="bi bi-search position-absolute search-icon"></i>
+    <!-- <i class="bi bi-x position-absolute clear-search"  (click)="clearSearch()"></i> -->
+  </div>
+</div>
+    <!-- <div class="mb-4">
+      <input
+       type="text"
+       placeholder="Search by Employee or Department"
+       [(ngModel)]="searchTerm"
+       class="form-control ps-5 pe-5 p-2"
+       (input)="applyFilter()"
+      />
+    </div> -->
+    <div class="d-flex flex-column align-items-center mb-4 mt-5">
+      <div class="d-flex align-items-center mb-3">
+        <input
+          type="date"
+          [(ngModel)]="startDate"
+          class="form-control date-input me-2"
+        />
+        <input
+          type="date"
+          [(ngModel)]="endDate"
+          class="form-control date-input me-2"
+        />
+        <button class="btn btn-primary filter-button" (click)="filterByDate()">
+          Filter by Date
+        </button>
+      </div>
+    </div>
+    
+    <!-- <div class="d-flex justify-content-center h-50 mb-4 w-50 mt-5">
+      <input
+        type="date"
+        [(ngModel)]="startDate"
+        class="form-control"
+      />
+    
+      <input
+        type="date"
+        [(ngModel)]="endDate"
+        class="form-control "
+      />
+    
+      <button class="btn btn-primary" (click)="filterByDate()">
+        Filter by Date
+      </button>
+    </div> -->
+    
+      <!-- <button class="btn btn-primary ml-2" (click)="searchAttendances()">Search</button> -->
+    <div class="d-flex justify-content-end align-items-center mb-4">
+      <app-add-button [entity]="'Attendance'"
+        [routerLink]="['/attendance', 0, 'edit']" />
+    </div>
+  
+    <div className="table-responsive mb-4">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="id" class="col-1">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let attendance"> {{attendance.id}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="DepartmentName" >
+          <th mat-header-cell *matHeaderCellDef>Department Name </th>
+          <td mat-cell *matCellDef="let attendance"> {{attendance. department_name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="EmployeeName" >
+            <th mat-header-cell *matHeaderCellDef>Employee Name </th>
+            <td mat-cell *matCellDef="let attendance"> {{attendance.employee_name}} </td>
+          </ng-container>
+          
+           <ng-container matColumnDef="checkIN" >
+            <th mat-header-cell *matHeaderCellDef>checkIN </th>
+            <td mat-cell *matCellDef="let attendance"> {{attendance.checkIN}} </td>
+           </ng-container>
+           <ng-container matColumnDef="checkOUT" >
+            <th mat-header-cell *matHeaderCellDef>checkOUT </th>
+            <td mat-cell *matCellDef="let attendance"> {{attendance.checkOUT}} </td>
+           </ng-container>
+
+           <ng-container matColumnDef="date" >
+            <th mat-header-cell *matHeaderCellDef>date </th>
+            <td mat-cell *matCellDef="let attendance"> {{attendance.date}} </td>
+           </ng-container>
+        <!-- Add other columns as needed -->
+        <ng-container matColumnDef="action" class="col-7">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let attendance">
+            <button class="btn btn-edit mx-2"
+              [routerLink]="['/attendance', attendance.id, 'edit']">
+              <i class="bi bi-pen"></i> Edit
+            </button>
+            <button class="btn btn-delete mx-2"
+              (click)="openDeleteModal(attendance.id)">
+              <i class="bi bi-x-lg"></i> Delete
+            </button>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      @if(showModal){
+      <app-confirm-modal
+        (confirmed)="confirmDelete()"
+        (closed)="closeModal()"
+        [message]="'Are you sure you want to delete this attendance?'" />
+      }
+  
+      <mat-paginator [length]="totalAttendances" [pageSize]="5"
+        [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4"></mat-paginator>
+  
+    </div>
+   
