--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,87 @@
-<p>users works!</p>
+
+
+<div class="container px-5 py-3">
+  <!-- Page title  -->
+  <app-page-title [title]="'All Users'"></app-page-title>
+  
+  <!-- Success message -->
+  <div *ngIf="message">
+    <div class="alert alert-success">
+      {{ message }}
+      <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
+    </div>
+  </div>
+
+  <!-- Add new user button -->
+  <div class="d-flex justify-content-end align-items-center mb-4">
+    <app-add-button [entity]="'User'" [routerLink]="['/user', 0, 'edit']"></app-add-button>
+  </div>
+
+ <!-- User Table -->
+<div class="table-responsive mb-4">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let user">{{ user.id }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="Name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let user">{{ user.name }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="Email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="Group">
+        <th mat-header-cell *matHeaderCellDef>Group</th>
+        <td mat-cell *matCellDef="let user">
+          <div class="mb-2" *ngFor="let group of user.groups">
+            {{ group.name }}
+          </div>
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="Permissions">
+        <th mat-header-cell *matHeaderCellDef>Permissions</th>
+        <td mat-cell *matCellDef="let user">
+          <div class="d-flex" *ngFor="let group of user.groups">
+            <div class="me-2 mb-2" *ngFor="let permission of group.permissions">
+              <span *ngIf="permission === 'view'">View</span>
+              <span *ngIf="permission === 'add'">Add</span>
+              <span *ngIf="permission === 'edit'">Edit</span>
+              <span *ngIf="permission === 'delete'">Delete</span>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let user">
+          <button class="btn btn-edit mx-2" [routerLink]="['/user', user.id, 'edit']">
+            <i class="bi bi-pen"></i> Edit
+          </button>
+          <button class="btn btn-delete mx-2" (click)="openDeleteModal(user.id)">
+            <i class="bi bi-x-lg"></i> Delete
+          </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [length]="totalUsers" [pageSize]="5" [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4"></mat-paginator>
+  </div>
+  
+  <!-- Confirmation Modal -->
+  <app-confirm-modal
+    *ngIf="showModal"
+    (confirmed)="confirmDelete()"
+    (closed)="closeModal()"
+    [message]="'Are you sure you want to delete this user?'"
+  ></app-confirm-modal>
+  
