--- a/src/app/pages/offical-holidays/offical-holidays.component.html
+++ b/src/app/pages/offical-holidays/offical-holidays.component.html
@@ -1,1 +1,73 @@
-<p>offical-holidays works!</p>
+<!-- holidays -->
+<div class="container px-5 py-3">
+  <app-page-title [title]="'All Holidays'" />
+  @if(message){
+  <div class="alert alert-success">
+    {{ message }}
+    <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
+  </div>
+  }
+  <div class="d-flex justify-content-end align-items-center mb-4">
+    <app-add-button [entity]="'Holidays'"
+      [routerLink]="['/officalHolidays', 0, 'edit']" />
+  </div>
+
+  <div className="table-responsive mb-4">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let holiday"> {{holiday.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date" >
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let holiday"> {{holiday.date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title" >
+        <th mat-header-cell *matHeaderCellDef> Day </th>
+        <td mat-cell *matCellDef="let holiday"> {{holiday.title}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="description" >
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let holiday"> {{holiday.description}} </td>
+      </ng-container>
+
+    
+
+      <!-- Add other columns as needed -->
+      <ng-container matColumnDef="action" class="col-7">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let holiday">
+          <button class="btn btn-view me-2"
+            [routerLink]="['/officalHolidays', holiday.id]"><i
+              class="bi bi-eye"></i>
+            View</button>
+          <button class="btn btn-edit mx-2"
+            [routerLink]="['/officalHolidays', holiday.id, 'edit']">
+            <i class="bi bi-pen"></i> Edit
+          </button>
+          <button class="btn btn-delete mx-2"
+            (click)="openDeleteModal(holiday.id)">
+            <i class="bi bi-x-lg"></i> Delete
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    @if(showModal){
+    <app-confirm-modal
+      (confirmed)="confirmDelete()"
+      (closed)="closeModal()"
+      [message]="'Are you sure you want to delete this holiday?'" />
+    }
+
+    <mat-paginator [length]="totalHolidays" [pageSize]="5"
+      [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4">
+    </mat-paginator>
+
+  </div>
+</div>
