--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -30,6 +30,12 @@
         <td mat-cell *matCellDef="let user">{{ user.name }}</td>
       </ng-container>
 
+         <!--Full Name Column -->
+         <ng-container matColumnDef="Full_Name">
+          <th mat-header-cell *matHeaderCellDef>Full Name</th>
+          <td mat-cell *matCellDef="let user">{{ user.Full_name }}</td>
+        </ng-container>
+
       <!-- Email Column -->
       <ng-container matColumnDef="Email">
         <th mat-header-cell *matHeaderCellDef>Email</th>
